--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,80 @@
-body {
+* {
+  padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.credit-card {
+  display: flex;
+  flex-direction: column;
+  height: 370px;
+  width: 590px;
+  border: none;
+  color: #fff;
+  background-color: #2954A2;
+  margin: 100px auto;
+  padding: 50px 40px;
+  border-radius: 20px;
+}
+
+.bank-name {
+  text-align: right;
+  margin-bottom: 35px;
+  font-size: 42px;
+  line-height: 48px;
+  font-weight: 900;
+  font-family: 'Fira Sans', sans-serif;
+  letter-spacing: 3px;
+}
+
+.card-number {
+  margin-top: 32px;
+  display: flex;
+  flex-direction: column;
+}
+
+.number {
+  font-size: 36px;
+  font-family: 'Nunito', sans-serif;
+  line-height: 48px;
+  font-weight: 600;
+  width: 100%;
+  letter-spacing: 4px;
+}
+
+.num {
+  font-family: 'Noto Sans', sans-serif;
+  font-size: 18px;
+}
+
+.expiry-date {
+  justify-content: center;
+  display: flex;
+  flex-direction: row;
+  margin-bottom: 20px;
+}
+
+.expiry-date > div {
+  width: 40px;
+  font-family: 'Nunito', sans-serif;
+  font-size: 16px;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  margin-right: 1.4rem;
+  height: 30px;
+}
+
+.date {
+  font-size: 36px;
+  font-family: 'Nunito', sans-serif;
+  line-height: 48px;
+  font-weight: 600;
+  letter-spacing: 5px;
+}
+
+.card-holder-name {
+  font-size: 36px;
+  font-family: 'Rokkitt', serif;
+  text-transform: uppercase;
+  letter-spacing: 3px;
 }
